deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solar3d
  labels:
    app.kubernetes.io/part-of: solar3d
